unpackaged/objects/copado__OrgDiff__c.object
<CustomObject>
	<fields>
		<fullName>copado__From_Date__c</fullName>
		<inlineHelpText>If a value is entered only modification after this date (inclusive) will be added in the Diff</inlineHelpText>
		<label>From Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copado__From_Org__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Select the Source Credential for which you would like to compare the Metadata. This Credential will be the Credential from which you would like to migrate Metadata.</inlineHelpText>
		<label>Source Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Org Differences (Source Credential)</relationshipLabel>
		<relationshipName>FromOrgDiffs</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Last_Modified_By_Name__c</fullName>
		<inlineHelpText>If a value is entered, only modifications from this user will be included in the Diff. Use the user Full Name</inlineHelpText>
		<label>Last Modified By Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Metadata_Types__c</fullName>
		<inlineHelpText>Empty means all types. Select one or more types to limit the Org Difference only to selected items.</inlineHelpText>
		<label>Metadata Types</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__To_Date__c</fullName>
		<inlineHelpText>If a value is entered only modification before this date (inclusive) will be added in the Diff</inlineHelpText>
		<label>To Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copado__To_Org__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Select the Destination Credential for which you would like to compare the Metadata and would like to migrate Metadata to. The resulting grid will show a list of differences with &apos;create&apos;, &apos;update&apos; and &apos;delete&apos; which apply to this Credential.</inlineHelpText>
		<label>Destination Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Org Differences (Destination Credential)</relationshipLabel>
		<relationshipName>ToOrgDiffs</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Org Difference</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__From_Org__c</columns>
		<columns>copado__To_Org__c</columns>
		<columns>copado__From_Date__c</columns>
		<columns>copado__To_Date__c</columns>
		<columns>copado__Last_Modified_By_Name__c</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Org Difference Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Org Differences</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
	<validationRules>
		<fullName>copado__Should_be_differents</fullName>
		<active>true</active>
		<errorConditionFormula>copado__From_Org__c =  copado__To_Org__c</errorConditionFormula>
		<errorDisplayField>copado__To_Org__c</errorDisplayField>
		<errorMessage>The Org&apos;s to be compared can not be the same.</errorMessage>
	</validationRules>
</CustomObject>